--- a/content/posts/2018-05-25-testing-1-8-2.md
+++ b/content/posts/2018-05-25-testing-1-8-2.md
@@ -1,6 +1,6 @@
 ---
 template: SinglePost
-title: Bird
+title: CONFERENCIA VIRTUAL PROCESO DE TRANSFORMACIÓN Y MODERNIZACIÓN DE LA FUERZA AÉREA COLOMBIANA
 status: Published
 date: '2018-05-25'
 featuredImage: >-
@@ -14,8 +14,10 @@ meta:
   description: test meta description
   title: test meta title
 ---
-This is placeholder text that our web designers put here to make sure words appear properly on your website. This text is going to be replaced once the website is completed. You are currently reading text that is written in English, not any other language.
+Con la finalidad de conocer y analizar el proceso de la Transformación organizacional de la Fuerza Aérea Colombiana, hoy 14 de abril la Escuela Superior de Guerra Aérea en conjunto con la Fuerza Aérea Colombiana desarrollaron una reunión virtual con la participación del Comando de Operaciones de la FAP, MAG FAP Carlos Chávez Cateriano, del Jefe de la Subjefatura Estado Mayor, Estrategia y Planeación, Brigadier General FAC Juan Guillermo Conde Vargas, así como los Oficiales Generales y Oficiales Superiores de la Fuerza Aérea del Perú y de Colombia.
 
-Be careful not to waste too much time reading placeholder text! This text isn’t going to remain here because it doesn't pertain to the website. This paragraph has been copied from a program that automatically generates paragraphs like this. It is useful for web designers to use placeholder text so they can easily see what different fonts look like on a realistic paragraph.
+La reunión virtual integro temas de metodología transformación organizacional, definición de la estrategia, diagnóstico de la organización, estructura organizacional anterior, estructura organizacional actual, logros de transformación, entre otros.
 
-![jalalala](https://ucarecdn.com/59d8de4a-77f1-436d-b471-7f2df760ec6e/ "stest")
+A través del intercambio de la información entre las Fuerzas Aéreas hermanas se busca tener una visión para una futura transformación en la Fuerza Aérea del Perú.
+
+![jalalala](https://esfap.edu.pe/images/2021/WhatsAppImage2021-04-14at104122.jpeg "stest")
